# cell-lisca

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CRUSH.md  README.md  pyproject.toml
cell-core/: pyproject.toml
cell-core/src/cell_core/: __init__.py
cell-core/src/cell_core/interfaces/: pipeline.py
cell-core/src/cell_core/io/: h5_io.py
cell-core/src/cell_core/models/: __init__.py
cell-core/src/cell_core/network/: graph.py
cell-core/src/cell_core/pattern/: __init__.py  pattern.py
cell-core/src/cell_core/segmentation/: count.py
cell-core/src/cell_core/tracking/: tracker.py
cell-filter/: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml
cell-filter/src/cell_filter/: __main__.py  main.py
cell-filter/src/cell_filter/analysis/: __init__.py  core.py
cell-filter/src/cell_filter/core/: __init__.py  crop.py
cell-filter/src/cell_filter/extract/: __init__.py  __main__.py  core.py  main.py
cell-filter/src/cell_filter/filter/: __init__.py  __main__.py  core.py  main.py
cell-filter/src/cell_filter/pattern/: __init__.py  __main__.py  core.py  main.py
cell-filter/src/cell_filter/utils/: __init__.py  bounding_boxes.py
cell-filter/tests/: test.ipynb  test_counter.py
cell-grapher/: README.md  USAGE.md  example_usage.py  pyproject.toml
cell-grapher/src/cell_grapher/: __main__.py  h5_loader.py  main.py  pipeline.py  segmentation.py  tracking.py  trajectory.py  trajectory_visualization.py
cell-pattern/: README.md  pyproject.toml
cell-pattern/src/cell_pattern/: main.py
cell-pattern/src/cell_pattern/core/: __init__.py  crop.py  pattern.py
cell-pattern/src/cell_pattern/utils/: __init__.py  h5_io.py
cell-tensionmap/: pyproject.toml
cell-tensionmap/src/cell_tensionmap/: __init__.py  cli.py  integration.py
cell-tracker/: README.md  pyproject.toml
cell-viewer/: README.md  USAGE.md  pyproject.toml
cell-viewer/src/cell_viewer/ui/: main_window.py
docs/: .readthedocs.yaml  ARCHITECTURE.md  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  make.bat  overview.rst  quickstart.rst  requirements.txt  workflows.rst
docs/api/: index.rst
docs/modules/: cell-filter.rst  cell-grapher.rst  cell-pattern.rst  cell-tensionmap.rst  cell-viewer.rst  index.rst
notebooks/: read_h5.ipynb
scripts/: compare_segmentation.py  extract_channels.py
src/migrama/: __init__.py
src/migrama/analyze/: __init__.py  core.py
src/migrama/cli/: __init__.py  main.py
src/migrama/convert/: __init__.py  core.py
src/migrama/core/: __init__.py  cell_source.py  progress.py  voronoi.py
src/migrama/core/interfaces/: __init__.py
src/migrama/core/io/: __init__.py  h5_io.py  nikon.py  serializer.py
src/migrama/core/models/: __init__.py  data_models.py
src/migrama/core/network/: __init__.py  graph.py
src/migrama/core/pattern/: __init__.py  averaging.py  crop.py  cropper.py  detector.py  pattern.py  source.py
src/migrama/core/segmentation/: __init__.py  segmentation.py
src/migrama/core/tracking/: __init__.py  tracker.py
src/migrama/extract/: __init__.py  core.py
src/migrama/filter/: main.py
src/migrama/filter/analysis/: core.py
src/migrama/filter/utils/: bounding_boxes.py
src/migrama/graph/: __init__.py  __main__.py  adjacency.py  analysis.py  h5_loader.py  main.py  pipeline.py  segmentation.py  tracking.py  trajectory.py  trajectory_visualization.py  visualization.py
src/migrama/pattern/: __init__.py  main.py
src/migrama/tension/: cli.py  integration.py
src/migrama/viewer/: __main__.py
src/migrama/viewer/ui/: __init__.py  main_window.py
src/migrama/viewer/ui/widgets/: __init__.py  file_controls.py  frame_controls.py  image_viewer.py  interval_controls.py
