[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-core"
version = "0.1.0"
description = "Core utilities and interfaces for cell-lisca modules"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tianyi Cao", email = "ctyjackcao@outlook.com" }
]
dependencies = [
    "numpy",
    "h5py",
    "pydantic>=2.0.0",
    "typer",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cell_core"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
