[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-filter"
version = "0.1.0"
description = "Filtering micropatterned timelapse microscopy images based on number of cells"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tianyi Cao", email = "ctyjackcao@outlook.com" }
]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "opencv-python",
    "cellpose>4",
    "nd2",
    "xarray",
    "dask",
    "scikit-image",
    "scipy",
    "tifffile",
    "networkx",
    "pyyaml",
]

[project.scripts]
cell-filter-pattern = "cell_filter.pattern.main:main"
cell-filter-filter = "cell_filter.filter.main:main"
cell-filter-extract = "cell_filter.extract.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_filter"]
