[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-pattern"
version = "0.1.0"
description = "Pattern detection and annotation for micropatterned timelapse microscopy images"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tianyi Cao", email = "ctyjackcao@outlook.com" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "nd2",
    "xarray",
    "dask",
    "scikit-image",
    "scipy",
    "typer",
    "h5py",
]

[project.scripts]
cell-pattern = "cell_pattern.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_pattern"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
